[gd_scene load_steps=11 format=2]

[ext_resource path="res://koopa1.gd" type="Script" id=1]
[ext_resource path="res://SOUNDS/smw_stomp.wav" type="AudioStream" id=2]
[ext_resource path="res://ASSETS/koopa/koopa 1 80.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/koopa/koopa 2 80.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/koopa/31 31.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 48.3417, 83.5087 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "squish",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "squish2",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 68.7498, 7.87842 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 6.74426, 55.3781 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 5.96106, 60.3672 )

[node name="koopa1" type="KinematicBody2D"]
position = Vector2( 5335.32, -499.564 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -237.837, 19.8484 )
scale = Vector2( 0.9, 1 )
shape = SubResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -237.32, 20.8576 )
scale = Vector2( 2.2, 2.2 )
frames = SubResource( 24 )
animation = "walk"
frame = 1
playing = true

[node name="floor_checker" type="RayCast2D" parent="."]
position = Vector2( -241.532, 30 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( 0, 40 )

[node name="top_checker" type="Area2D" parent="."]
position = Vector2( 2.245, 0 )
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checker"]
position = Vector2( -245.517, -126.191 )
shape = SubResource( 25 )

[node name="sides_checker" type="Area2D" parent="."]
position = Vector2( 90.0857, 8.05341 )
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -396.989, 1.96985 )
shape = SubResource( 26 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( -263.673, 0.302922 )
shape = SubResource( 27 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Squish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="side" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -236.747, -0.605804 )
scale = Vector2( 6.54374, 10.2895 )

[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="side" to="." method="_on_side_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
